--- a/style/classic_blue/style.css
+++ b/style/classic_blue/style.css
@@ -29,9 +29,9 @@ body {
 	background-image:url(./images/containerBG.png);
 	background-repeat:repeat;
 
-	box-shadow: 		0 0px 50px 5px #FFF;
-	-moz-box-shadow: 	0 0px 50px 5px #FFF;
-	-webkit-box-shadow: 0 0px 50px 5px #FFF;
+	box-shadow: 		0 0 50px 5px #FFF;
+	-moz-box-shadow: 	0 0 50px 5px #FFF;
+	-webkit-box-shadow: 0 0 50px 5px #FFF;
 	overflow:hidden;
 	margin-bottom:-39px;
 }
@@ -47,7 +47,7 @@ body {
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
-	border: 0px;
+	border: 0;
 
     width: 100%;
 }
@@ -146,14 +146,14 @@ body {
 	background: -o-linear-gradient(left, #DFE6E7, #F3FAFB 50%, #DFE6E7);
 }
 #notifications p.notification {
-	margin:0px;
+	margin:0;
 	padding-top:5px;
 	height:25px;
 	background-color:#D0DAE0;
 	border-bottom:1px solid #222;
 }
 #notifications p.notification:last-child {
-	border:0px;
+	border:0;
 }
 
 #sidebar {
@@ -200,8 +200,8 @@ body {
 #content div.submenu {
 	/*position:absolute;*/
 	top:30px;
-	left:0px;
-	right:0px;
+	left:0;
+	right:0;
 
 	height:30px;
 
@@ -216,13 +216,13 @@ body {
 	width:100%;
 	position:relative;
 	list-style:none;
-	margin:0px;
-	padding:0px;
+	margin:0;
+	padding:0;
 }
 #content ul.submenu li {
 	display:inline-block;
-	margin:0px;
-	padding:0px;
+	margin:0;
+	padding:0;
 	font-size: 13px;
 	height:30px;
 }
@@ -252,11 +252,11 @@ body {
 	text-shadow: 1px 1px 1px #000000;
 }
 #content ul.submenu li:last-child a {
-	border-right:0px;
+	border-right:0;
 }
 
 div.submenuMargin {
-	height:0px;
+	height:0;
 	margin-bottom:46px;
 }
 
@@ -274,7 +274,7 @@ ul.menu a {
 	width:100%;
 	height:20px;
 
-	padding: 5px 0px;
+	padding: 5px 0;
 
 	border-bottom: 1px solid #000020;
 
@@ -297,10 +297,10 @@ ul.menu a:hover {
 }
 
 ul.menu hr {
-	margin:0px;
+	margin:0;
 	height:2px;
-	padding:0px;
-	border:0px;
+	padding:0;
+	border:0;
 	border-bottom:1px solid #000020;
 	color:#005090;
 	background-color:#005090;
@@ -309,14 +309,14 @@ ul.menu hr {
 div.logout {
 	width:100%;
 	position:absolute;
-	bottom:0px;
+	bottom:0;
 }
 div.logout a {
 	display:block;
 	width:100%;
 	height:20px;
 
-	padding: 5px 0px;
+	padding: 5px 0;
 
 	text-decoration:none;
 	text-transform:uppercase;
@@ -370,7 +370,7 @@ label {
 }
 
 div.header {
-	margin-top:0px;
+	margin-top:0;
 	border-top-left-radius:15px;
 	border-top-right-radius:15px;
 	border-bottom:1px solid #AAAAAA;
@@ -399,7 +399,7 @@ div.header {
 	background: -o-linear-gradient(top, #0C283C, #318FD3);
 }
 #sidebar div.header {
-	border-bottom:0px;
+	border-bottom:0;
 }
 
 #content a, a:visited {
@@ -421,7 +421,7 @@ a.link:hover {
 }
 
 form {
-	margin:0px;
+	margin:0;
 }
 p {
 	margin-bottom:5px;
@@ -443,7 +443,7 @@ p {
 	border:1px solid #404040;
 	background-color:#D0DAE0;
 
-	border-spacing:0px;
+	border-spacing:0;
 	border-collapse:collapse;
 }
 #content table.table td {
@@ -474,7 +474,7 @@ p {
 
 #content table.globalMessage {
 	margin-top:35px;
-	margin-bottom:0px;
+	margin-bottom:0;
 }
 
 .systemMessage {
@@ -506,7 +506,7 @@ p {
 #content .premiumUser, #content .premiumUser:hover {
     --color-text-shadow: rgba(255, 255, 255, 0.4);
 
-    background: transparent url("/images/premium_glow.gif") repeat scroll 0% 0%;
+    background: transparent url("/images/premium_glow.gif") repeat scroll 0 0;
     text-shadow:
             0 1px 1px var(--color-text-shadow),
             0 -1px 1px var(--color-text-shadow),
@@ -515,12 +515,12 @@ p {
 }
 #content .staffMember {
 	width: 100%;
-	margin: 1px 0px 3px;
-	padding: 0px;
+	margin: 1px 0 3px;
+	padding: 0;
 	font-size: 10px;
 	text-transform: uppercase;
 	color: #E0E0E0;
-	text-shadow: 0px -1px 1px;
+	text-shadow: 0 -1px 1px;
 }
 
 #content .blue, #content a.blue:hover  {
@@ -552,22 +552,22 @@ p {
 }
 
 #content td.rowHeader {
-	padding:1px 0px;
-	border:0px;
+	padding:1px 0;
+	border:0;
 	border-bottom:1px solid #000000;
 	font-weight:bold;
 	text-align:center;
 }
 #content td.row1 {
-	padding:1px 0px;
-	border:0px;
+	padding:1px 0;
+	border:0;
 	background-color:#BACAD0;
 
 
 }
 #content td.row2 {
-	padding:1px 0px;
-	border:0px;
+	padding:1px 0;
+	border:0;
 	background-color:#D0DAE0;
 }
 
@@ -600,7 +600,7 @@ p.trainingNotification {
 
 br.clear {
 	clear:both;
-	margin:0px;
+	margin:0;
 }
 
 /* Travel */
@@ -608,7 +608,7 @@ br.clear {
     display: inline-block;
     height:32px;
     width:32px;
-    margin:0px;
+    margin:0;
     background-size: 100%;
     background-repeat: no-repeat;
 }
