--- a/ui_components/src/battle/Battle.css
+++ b/ui_components/src/battle/Battle.css
@@ -1,7 +1,6 @@
-
-
-
-
+:root {
+    --gold-color: #FDD017;
+}
 
 /* BATTLE FIELD */
 .tilesContainer {
@@ -9,6 +8,7 @@
     justify-content: space-evenly;
     padding: 10px 0;
 }
+
 .tile {
     height: 70px;
     width: 70px;
@@ -22,6 +22,7 @@
     border-radius: 35px;
     border: 1px solid #807a68;
 }
+
 .tileIndex {
     position: absolute;
     bottom: 1px;
@@ -33,6 +34,7 @@
     font-size: 8px;
     opacity: 0.7;
 }
+
 .tileFighter {
     height: 30px;
     width: 30px;
@@ -40,27 +42,166 @@
     align-items: center;
     justify-content: center;
 
-    background: rgba(255,255,255,0.5);
+    background: rgba(255, 255, 255, 0.5);
     border-radius: 15px;
-    border: 1px solid rgba(0,0,0,0.4);
+    border: 1px solid rgba(0, 0, 0, 0.4);
     color: black;
 }
 
 .tileFighter.ally {
-    background: rgba(0,0,255,0.4);
+    background: rgba(0, 0, 255, 0.4);
 }
+
 .tileFighter.enemy {
-    background: rgba(255,0,0,0.4);
+    background: rgba(255, 0, 0, 0.4);
 }
 
 .tilesContainer.movementActive .tile[data-player-tile="0"] {
     cursor: pointer;
 }
+
 .tilesContainer.movementActive .tile:hover[data-player-tile="0"] {
     background: #b1a990;
 }
+
 .tilesContainer.movementActive .tile.selected[data-player-tile="0"] {
     background: #b1a990;
     border-color: #5d594c;
     box-shadow: 0 0 3px 0 black;
+}
+
+
+/* BATTLE ACTION PROMPT */
+#handSeals {
+    padding-top: 4px;
+    position: relative;
+}
+
+#handSeals p {
+    display: inline-block;
+    width: 80px;
+    height: 90px;
+    margin: 4px;
+    position: relative;
+}
+
+#handSeals img {
+    height: 62px;
+    width: 62px;
+    position: relative;
+    z-index: 1;
+    border: 3px solid rgba(0, 0, 0, 0);
+    border-radius: 5px;
+}
+
+#handSeals .handsealNumber {
+    display: none;
+    width: 18px;
+    position: absolute;
+    z-index: 20;
+    text-align: center;
+    left: 31px;
+    right: 31px;
+    bottom: 30px;
+
+    /* Style */
+    font-size: 14px;
+    font-weight: bold;
+    background-color: var(--gold-color);
+    border-radius: 10px;
+}
+
+#handSeals .handsealTooltip {
+    display: block;
+    margin: 0;
+    text-align: center;
+    height: 16px;
+}
+
+#handsealOverlay {
+    position: absolute;
+
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index: 50;
+    display: none;
+}
+
+/* WEAPONS */
+#weapons {
+    height: 200px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+#jutsu {
+    padding-left: 5px;
+}
+
+#jutsu .jutsuCategory {
+    display: inline-block;
+    margin: 0;
+    vertical-align: top;
+    margin-right: 1%;
+    text-align: center;
+}
+
+#jutsu .jutsuName {
+    display: inline-block;
+    padding: 5px 7px;
+    margin-bottom: 10px;
+
+    /* Style */
+    background: linear-gradient(#EFEFEF, #E4E4E4);
+    border: 1px solid #E0E0E0;
+    border-radius: 15px;
+    text-align: center;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0);
+}
+
+#jutsu .jutsuName:last-child {
+    margin-bottom: 1px;
+}
+
+#jutsu .jutsuName:hover {
+    background: linear-gradient(#E4E4E4, #EFEFEF);
+    cursor: pointer;
+}
+
+#jutsu .jutsuName[aria-disabled='true'] {
+    opacity: 0.75;
+}
+
+#jutsu .jutsuName[aria-disabled='true']:hover {
+    background: linear-gradient(#EFEFEF, #E4E4E4);
+    cursor: default;
+}
+
+#weapons p.weapon {
+    display: inline-block;
+    padding: 8px 10px;
+    margin-top:14px;
+    margin-right: 15px;
+    vertical-align: top;
+
+
+    /* Style */
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid #C0C0C0;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0);
+}
+
+#weapons p.weapon:last-child {
+    margin-right: 1px;
+}
+
+#weapons p.weapon:hover {
+    background: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
 }
