--- a/ui_components/src/battle/Battle.css
+++ b/ui_components/src/battle/Battle.css
@@ -159,6 +159,33 @@
     padding-left: 20px;
     padding-right: 20px;
 }
+.weapon {
+    display: inline-block;
+    padding: 8px 10px;
+    margin-top:14px;
+    margin-right: 15px;
+    vertical-align: top;
+
+    /* Style */
+    background-color: rgba(255, 255, 255, 0.1);
+    border: 1px solid #C0C0C0;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0);
+    user-select: none;
+}
+
+.weapon:last-child {
+    margin-right: 1px;
+}
+.weapon:hover {
+    background: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+.weapon.selected {
+    box-shadow: 0 0 4px 0 #000000;
+}
+
 
 #jutsuContainer {
     padding-left: 5px;
@@ -194,6 +221,8 @@
     border-radius: 15px;
     text-align: center;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0);
+
+    user-select: none;
 }
 .jutsuButton.selected {
     box-shadow: 0 0 4px 0 #000000;
@@ -217,27 +246,3 @@
     cursor: default;
 }
 
-#weapons p.weapon {
-    display: inline-block;
-    padding: 8px 10px;
-    margin-top:14px;
-    margin-right: 15px;
-    vertical-align: top;
-
-
-    /* Style */
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid #C0C0C0;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0);
-}
-
-#weapons p.weapon:last-child {
-    margin-right: 1px;
-}
-
-#weapons p.weapon:hover {
-    background: rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-}
