--- a/ui_components/src/battle/Battle.css
+++ b/ui_components/src/battle/Battle.css
@@ -108,6 +108,8 @@
     z-index: 1;
     border: 3px solid rgba(0, 0, 0, 0);
     border-radius: 5px;
+
+    cursor: pointer;
 }
 .handSeal img {
     height: 100%;
